log
Thu, Mar 20, 2025 10:06:34 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025 10:36:20 PM: 
 exercises.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:45:10: error: unused variable 'L' [-Werror=unused-variable]
    List* L = create_list();
          ^
exercises.c: At top level:
exercises.c:47:4: error: expected identifier or '(' before 'return'
    return L;
    ^~~~~~
exercises.c:48:1: error: expected identifier or '(' before '}' token
 }
 ^
exercises.c: In function 'sumaLista':
exercises.c:62:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       sumaLista += actual;
                 ^~
exercises.c: In function 'eliminaElementos':
exercises.c:84:17: error: comparison between pointer and integer [-Werror]
       if(actual == elem){
                 ^~
exercises.c: In function 'crea_lista':
exercises.c:46:4: error: control reaches end of non-void function [-Werror=return-type]
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
c857e2b
Thu, Mar 20, 2025 10:39:11 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
ec34813
Thu, Mar 20, 2025 10:43:07 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
15f4e1b
Thu, Mar 20, 2025 10:47:57 PM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
3782ba9
Thu, Mar 20, 2025 10:52:44 PM: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
c8037a4
Thu, Mar 20, 2025 10:53:45 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
91945b0
Thu, Mar 20, 2025 10:55:12 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
d0831ec
Thu, Mar 20, 2025 10:55:35 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
2cced3b
Thu, Mar 20, 2025 10:56:11 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cfa7434
Thu, Mar 20, 2025 11:55:25 PM: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:107:22: error: implicit declaration of function 'createStack' [-Werror=implicit-function-declaration]
    Stack* pila_aux = createStack();
                      ^~~~~~~~~~~
exercises.c:107:22: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
8923c9a
Fri, Mar 21, 2025 12:50:20 AM: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
2941580
Fri, Mar 21, 2025 12:55:33 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
adf9eaf
Sat, Mar 22, 2025 11:20:03 AM: 
 exercises.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:6:0:
arraylist.c: In function 'create_list':
arraylist.c:15:34: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
   List* L = (List*)malloc(sizeof(List));
                                  ^~~~
arraylist.c:16:4: error: dereferencing pointer to incomplete type 'List {aka struct List}'
   L->current = 0;
    ^~
test.c: In function 'test_copia_pila':
test.c:176:12: error: called object 'top' is not a function or function pointer
     dato = top(P1);
            ^~~
In file included from test.c:5:0:
exercises.c:131:9: note: declared here
     int top = -1;
         ^~~
test.c:177:19: error: called object 'top' is not a function or function pointer
     void* dato2 = top(P2);
                   ^~~
In file included from test.c:5:0:
exercises.c:131:9: note: declared here
     int top = -1;
         ^~~
test.c:178:19: error: called object 'top' is not a function or function pointer
     void* dato3 = top(Paux);
                   ^~~
In file included from test.c:5:0:
exercises.c:131:9: note: declared here
     int top = -1;
         ^~~
test.c: In function 'parentesisBalanceados':
test.c:253:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
 }
 ^
test.c:271:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:6:0:
arraylist.c: In function 'first':
arraylist.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:253:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:37:6: error: 'info_msg' defined but not used [-Werror=unused-function]
 void info_msg(char* msg){
      ^~~~~~~~
In file included from test.c:6:0:
arraylist.c:102:5: error: 'get_size' defined but not used [-Werror=unused-function]
 int get_size(List *L) {
     ^~~~~~~~
arraylist.c:89:7: error: 'popCurrent' defined but not used [-Werror=unused-function]
 void* popCurrent(List *L) {
       ^~~~~~~~~~
arraylist.c:80:7: error: 'popBack' defined but not used [-Werror=unused-function]
 void* popBack(List *L) {
       ^~~~~~~
arraylist.c:68:7: error: 'popFront' defined but not used [-Werror=unused-function]
 void* popFront(List *L) {
       ^~~~~~~~
arraylist.c:55:6: error: 'pushCurrent' defined but not used [-Werror=unused-function]
 void pushCurrent(List *L, void *dato) {
      ^~~~~~~~~~~
arraylist.c:37:6: error: 'pushFront' defined but not used [-Werror=unused-function]
 void pushFront(List *L, void *dato) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
21d4433
